--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ sudo: required
 language: go
 go:
     - 1.6
-    - tip
 
 services:
     - docker
@@ -14,7 +13,7 @@ env:
 
 before_install:
     - apt-cache madison docker-engine
-    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
+    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y --force-yes docker-engine=${DOCKER_VERSION}
     - curl -sSL https://github.com/evo-cloud/hmake/releases/download/v1.1.0rc1/hmake-linux-amd64.tar.gz | sudo tar -C /usr/local/bin -xz
 
 script:
